--- a/saving_images.html
+++ b/saving_images.html
@@ -60,7 +60,7 @@
                     <h5>Video Scrubber</h5>
                     <img src="img/scrubber.png" width="270" height="33"><br><br><br>
                     <p>Shapes that are drawn onto the video will be included in the saved image</p>
-                    <p>If you are happy and the position, you can press the save button.</p>
+                    <p>If you are happy with the position, you can press the save button.</p>
                     <br><br>
                     <img src="img/saving_image.jpg" width="270" height="480">
                     <br><br>
