Added and edited

--- a/best_out_of_pg.html
+++ b/best_out_of_pg.html
@@ -49,7 +49,7 @@
                 <div class="align-items-center justify-content-center">
                     <div class="single-services">
                         <p>Though videos can directly be edited/played, by selecting it from your device or recording it - <b>It is recomended to import/save your videos to get the best result.</b></p>
-                        <p>If you import/save a video first, you will get faster and more accurate seeking.</p>
+                        <p>If you import/save a video first, you will get faster and more accurate video frame seeking.</p>
                         <p>The player will still work perfectly fine when you do not import a video, but it will not be optimized for fast and accurate seeking.</p>
                         <h4><u>ProGolf's intended work flow:</u></h4>
                         <hr>
