--- a/drawingtools.html
+++ b/drawingtools.html
@@ -53,11 +53,11 @@
             <br>
             <div class="align-items-center justify-content-center">
                 <div class="single-services">
-                    <h4>The Line Tool</h4>
+                    <h4>Line</h4>
                     <p>The line tool has 3 anchor points.</p>
                     <img src="img/drawing_instructions_line.png" width="200" height="200">
                     <p></p>
-                    <p>One in the center of the line and two on each side of the line. The anchor points on the side are used to resize the line and the one in the center is to move the line around.</p>
+                    <p>One in the center of the line and one on each side of the line. The anchor points on the side are used to resize the line and the one in the center is to move the line around.</p>
                     <p>These anchor points can be made visible in the Settings tab.</p>
                 </div>
             </div>
@@ -66,11 +66,11 @@
             <br>
             <div class="align-items-center justify-content-center">
                 <div class="single-services">
-                    <h4>The Circle Tool</h4>
-                    <p>The circle tool has 2 anchor points.</p>
+                    <h4>Circle</h4>
+                    <p>The circular tool has 2 anchor points.</p>
                     <img src="img/drawing_instructions_circle.png" width="200" height="200">
                     <p></p>
-                    <p>One in the center to move the circle around and one on the bottom right corner to resize the circle.</p>
+                    <p>One in the center to move the circle around and one in the bottom right corner to resize the circle.</p>
                 </div>
             </div>
             <br>
@@ -78,11 +78,11 @@
             <br>
             <div class="align-items-center justify-content-center">
                 <div class="single-services">
-                    <h4>The Rectangle Tool</h4>
-                    <p>The rectangle tool has 2 anchor points.</p>
+                    <h4>Rectangle</h4>
+                    <p>The rectangular tool has 2 anchor points.</p>
                     <img src="img/drawing_instructions_rectangle.png" width="200" height="200">
                     <p></p>
-                    <p>One in the center to move the rectangle around and one on the bottom right corner to resize the rectangle.</p>
+                    <p>One in the center to move the rectangle around and one in the bottom right corner to resize the rectangle.</p>
                 </div>
             </div>
             <br>
@@ -90,11 +90,11 @@
             <br>
             <div class="align-items-center justify-content-center">
                 <div class="single-services">
-                    <h4>The Arrow Tool</h4>
+                    <h4>Arrow</h4>
                     <p>The arrow tool has 3 anchor points.</p>
                     <img src="img/drawing_instructions_arrow.png" width="200" height="200">
                     <p></p>
-                    <p>One in the center of the arrow and two on each side of the arrow. The anchor points on the side are used to resize the arrow and the one in the center is to move the line around.</p>
+                    <p>One in the center of the arrow and one on each side of the arrow. The anchor points on the side is to resize the arrow and the one in the center is to move the arrow around.</p>
                 </div>
             </div>
             <br>
@@ -102,11 +102,23 @@
             <br>
             <div class="align-items-center justify-content-center">
                 <div class="single-services">
-                    <h4>The Angle Tool</h4>
-                    <p>The arrow tool has 3 anchor points.</p>
+                    <h4>Angle</h4>
+                    <p>The angular tool has 3 anchor points.</p>
                     <img src="img/drawing_instructions_angle.png" width="200" height="200">
                     <p></p>
-                    <p>One in the center and two on each side end of the lines. The anchor points on the ends are used to adjust the angle and the one in the center is to move the shape around.</p>
+                    <p>One in the center and one on the end of each line. The anchors on the end are used to adjust the angle and the one in the center is to move the angle around.</p>
+                </div>
+            </div>
+            <br>
+            <hr>
+            <br>
+            <div class="align-items-center justify-content-center">
+                <div class="single-services">
+                    <h4>Freehand Tool</h4>
+                    <p>The freehand tool doesn't have adjustable anchor points.</p>
+                    <img src="img/drawing_instructions_free_hand.png" width="200" height="200">
+                    <p></p>
+                    <p>When exporting a video, lines/shapes that was drawn with the freehand tool, will not be included in the exported video.</p>
                 </div>
             </div>
             <br>
