--- a/index.html
+++ b/index.html
@@ -55,15 +55,26 @@
                     <br>
                     <br>
                     <br>
-					<div class="rr">
-						<div class="mCol">
+					<div class="row">
+						<div class="col-md-6">
                             <a href="best_out_of_pg.html" style="text-decoration : none; color : #222;">
                                 <div class="single-services" >
                                     <img src="img/star_icon.png" width="50" height="50">
                                     <h4>Get The Best<br>Out Of ProGolf</h4>
                                 </div>
                             </a>
-						</div>			
+                            <br><br><br>
+						</div>	
+                        
+                        <div class="col-md-6">
+                            <a href="video_player.html" style="text-decoration : none; color : #222;">
+                                <div class="single-services" >
+                                    <img src="img/icons/play.png" width="50" height="50">
+                                    <h4>Video Player</h4>
+                                </div>
+                            </a>
+						</div>
+                        
 					</div>
                     <br>
                     <br>
