--- a/qanda.html
+++ b/qanda.html
@@ -42,7 +42,7 @@
 							<h1 class="text-white">
 								Q & A			
 							</h1>
-                            <p style="color:#fff;">(All this questions have been asked by users)</p>
+                            <p style="color:#fff;">(You can ask a new question by sending us an email and your question will be added here to help others)</p>
 						</div>	
 					</div>
 				</div>
@@ -63,9 +63,9 @@
                 <hr>
                 <div class="single-services">
                     <h4>Q</h4>
-                    <p>"Why does videos take so long to export?"</p>
+                    <p>"Why does it take so long to import/save a video?"</p>
                     <h4>A</h4>
-                    <p>Only export the part of the video which you would like to analyze (your swing). The length of you video will determine the time it will take to save/export your video. We can make the video export faster, but the video quality will suffer.</p>
+                    <p>You should only save the part of the video which you would like to analyze (your swing). You can do this by adjusting the video trimmer, please see "Saving Videos". The length of your video will determine the time it will take to save/export. By doing this, the waiting time will drastically be decreased.</p>
                 </div>
                 <br>
                 <hr>
@@ -82,10 +82,7 @@
                     <h4>Q</h4>
                     <p>"Why does my device not support video comparison?"</p>
                     <h4>A</h4>
-                    <p>We use an API called MediaCodec to display videos. Most devices only support 2 instances of this API.
-                     Other applications also use this API, like your camera or other video players. Please make sure that you close this 
-                    applications before trying to compare a swing. If you still can't open a second video in the swing comparison screen 
-                    then your device only supports one instance of MediaCodec at a time.</p>
+                    <p>ProGolf uses an API called MediaCodec for displaying videos. Most devices only support 2 instances of this API and some only one. Other applications, like your camera or a video player app, might also be using this API. Please close these applications before trying to compare a swing. If you still can't open the second video in the swing comparison screen, then your device only supports one instance of MediaCodec at a time. Unfortunately, if this is the case, there is nothing to be done about it..</p>
                 </div>
                 <br>
                 <hr>
