--- a/students.html
+++ b/students.html
@@ -67,21 +67,19 @@
                     <p style="font-size:20px;"><b><u>Student Profile</u></b></p>
                     <br>
                     <img src="img/student_profile_page.png" width="270" height="480"><br><br>
-                    <p>Here is where all your students videos, images and lessons will be saved to.</p>
-                    <p>To add a video, lesson or to edit your students information, press the blue plus sign.</p>
+                    <p>Here is where all your student videos, images and lessons will be saved to.</p>
+                    <p>Add a video, lesson or edit your students information by press the blue plus sign.</p>
                     <hr>
                     <br>
                     <p style="font-size:20px;"><b><u>Student Lessons</u></b></p>
                     <br>
-                    <p>You can add a student lesson by pressing the blue plus sign</p>
-                    <br>
                     <img src="img/student_add_lesson.png" width="270" height="480"><br><br>
-                    <p>After filling in all the fields, press the "Save Lesson" button.</p>
+                    <p>After completing all the fields, press the "Save Lesson" button.</p>
                     <p>The lesson will now be visible in the "Lessons" tab in your students profile page.</p>
                     <p>When you tap on the lesson, the following page will open.</p>
                     <img src="img/student_lesson_view.png" width="270" height="480"><br><br>
                     <p>You can edit all the fields on this page by tapping on them.</p>
-                    <p>You can also add videos and images to the lesson by tapping on the blue plus sign.</p>
+                    <p>You can also add videos and images to the lesson by selecting the blue plus sign.</p>
                     <p>All the selected videos and images will be sent to the student, as attachments, when you press the share button.</p><br>
                     
                     
