--- a/video_player.html
+++ b/video_player.html
@@ -60,20 +60,22 @@
                     <img src="img/video_player_view_speed_adjustment.jpg" width="270" height="106">
                     <br>
                     <br>
-                    <p>Pressing the above will open the following tab:</p>
+                    <p>Press the above button to open the following:</p>
                     <img src="img/video_player_view_speed_adjustment_dialog.jpg" width="270" height="480">
                     <br>
                     <br>
-                    <p>You can adjust the playback speen by moving the blue dot up and down.</p>
+                    <p>You can now adjust the playback speed by moving the blue dot up or down.</p>
                     <br>
                     <br>
                     <h5>Switch to video scrubber</h5>
                     <hr>
                     <br>
+                    <p>This feature is only available after importing/saving a video into ProGolf.</p>
+                    <br>
                     <img src="img/video_player_view_switch_scrubber.jpg" width="270" height="106">
                     <br>
                     <br>
-                    <p>Pressing the above will switch from the video trimmer to the video scrubber:</p>
+                    <p>Press the button shown above to switch from the video trimmer to the video scrubber:</p>
                     <img src="img/scrubber.png" width="270" height="33"><br>
                     <p>(The video scrubber provides more accurate seeking)</p>
                     <br>
@@ -86,16 +88,20 @@
                     <img src="img/video_player_view_hide_trimmer.jpg" width="270" height="106">
                     <br>
                     <br>
-                    <p>You can also hide the video trimmer by double tapping on it.</p>
+                    <p>You can also "double tap" on the trimmer to hide it or "double tap" on the scrubber to remove the black background.</p>
                     <br>
                     <br>
                     <h5>Compare current video</h5>
                     <hr>
                     <br>
-                    <p>You can comapre the current video with other videos by pressing this button:</p>
+                    <p>(This feature is only available after importing/saving a video into ProGolf.)</p>
+                    <br>
+                    <p>You can compare the current video with other imported videos by pressing this button:</p>
                     <br>
                     <img src="img/video_player_view_compare.jpg" width="270" height="106">
                     <br>
+                    <br>
+                    <p><b>Please note that this feature might not be available on some devices.</b></p>
                     <br>
                     <br>
                     <br>
